Fix Header weird GAP.

--- a/src/OnboardingSPA/components/Header/stylesheet.scss
+++ b/src/OnboardingSPA/components/Header/stylesheet.scss
@@ -73,6 +73,13 @@
 	}
 }
 
+.nfd-onboarding-header--sitegen {
+
+	body.is-fullscreen-mode & {
+		padding-left: 0;
+	}
+}
+
 .nfd-onboarding-skeleton.is-drawer-open {
 
 	.nfd-onboarding-header {
